# Echo

./: .gitattributes  .gitignore  Audio.cpp  Audio.h  Button.cpp  Button.h  CMakeLists.txt  CallbackFactory.cpp  CallbackFactory.h  DropdownList.cpp  DropdownList.h  Echo.sln  Echo.vcxproj  Echo.vcxproj.filters  GUI.cpp  GUI.h  Globals.cpp  Globals.h  KaraokeWindowGUI.cpp  KaraokeWindowGUI.h  LICENSE  LoadingWindowGUI.cpp  LoadingWindowGUI.h  MainWindowGUI.cpp  MainWindowGUI.h  MenuGUI.h  Modes.h  README.md  STTWindowGUI.cpp  STTWindowGUI.h  ScriptUtils.h  StringUtils.h  SubtitleWindowGUI.cpp  SubtitleWindowGUI.h  TextBox.cpp  TextBox.h  Transcriber.cpp  Transcriber.h  VideoUtils.h  audio.cpp  (+12 more)
Libraries/lib/: SDL2main.lib  SDL2test.lib  glfw3.lib  libwhisper.dylib  nanogui.exp  nanogui.lib  nfd.lib  nfd_d.lib  portaudio_x64.lib  whisper.exp  whisper.lib
Libraries/lib/raylib/: raylib.idb
Resources/: Echo240.mpeg  Echo480.mpeg  Echoo.mpeg  Intro.mpeg
assets/: Echo.mpeg  Echo360.mpeg  EchoLandingPage.mpeg  Echoo.mpeg
cmake/: packages.cmake
cmake/package/: Findnfd.cmake  Findportaudio.cmake  Findraylib.cmake  Findwhisper.cmake
src/: Audio.cpp  Audio.h  Button.h  Echo.vcxproj  Echo.vcxproj.filters  Globals.cpp  Globals.h  KaraokeWindowGUI.cpp  KaraokeWindowGUI.h  LoadingWindowGUI.cpp  MainWindowGUI.cpp  MainWindowGUI.h  STTWindowGUI.cpp  STTWindowGUI.h  ScriptUtils.h  StringUtils.h  SubtitleWindowGUI.cpp  SubtitleWindowGUI.h  Transcriber.cpp  Transcriber.h  main.cpp
